# WLDM-Automated-URL-Discovery-Semantic-Relevance-Filter

./: .gitignore  AGENTS.md  environment.yml  pyproject.toml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/scripts/bash/: check-prerequisites.sh  create-new-feature.sh
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
specs/001-url-discovery-filter/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-url-discovery-filter/checklists/: requirements.md
specs/001-url-discovery-filter/contracts/: cli.md
src/wldm_url_filter/: __init__.py  cli.py  config.py  discovery.py  ingestion.py  logging_config.py  models.py  outputs.py  reachability.py  relevance.py
tests/contract/: __init__.py  test_accepted_url_contract.py  test_access_reliability_contract.py  test_cli_contract.py  test_cli_discovery_contract.py
tests/integration/: __init__.py  test_cli_output_flow.py  test_discovery_flow.py  test_reachability_flow.py  test_relevance_flow.py
tests/unit/: __init__.py  test_accepted_url_output.py  test_discovery.py  test_ingestion.py  test_logging_config.py  test_models.py  test_outputs_base.py  test_reachability.py  test_relevance.py  test_url_safety.py  test_utility_exclusions.py
