[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wldm-url-filter"
version = "0.1.0"
description = "Automated URL discovery and semantic relevance filtering CLI."
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4",
    "httpx",
    "pandas",
    "pydantic",
    "rapidfuzz",
    "typer",
]

[project.scripts]
wldm-url-filter = "wldm_url_filter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--strict-config",
    "--strict-markers",
]

[tool.coverage.run]
branch = true
source = ["wldm_url_filter"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.12"
packages = ["wldm_url_filter"]
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
